--- a/index.html
+++ b/index.html
@@ -41,14 +41,17 @@
   <nav>
     <a href="#services">Leistungen</a>
     <a href="#referenzen">Referenzen</a>
+    <a href="#qualitaet">Qualität</a>
     <a href="#kontakt">Kontakt</a>
   </nav>
 </header>
 <main class="container">
+
+  <!-- HERO -->
   <section class="hero">
     <div class="card">
       <h1>Saubere Fenster — professionell & freundlich</h1>
-      <p class="lead">Erstklassiger Fensterreinigungsservice für Zuhause und Büro. Jetzt mit frischen Foto‑Referenzen echter Glanzarbeiten.</p>
+      <p class="lead">Erstklassiger Fensterreinigungsservice für Zuhause und Büro. Jetzt mit frischen Foto-Referenzen echter Glanzarbeiten.</p>
       <div class="grid-2">
         <div class="card">
           <h3>Unsere Leistungen</h3>
@@ -76,7 +79,7 @@
         <img src="olivia-cert.jpg" onerror="this.style.display='none'" style="width:100%;border-radius:10px">
       </div>
       <div style="margin-top:12px;color:var(--muted);font-size:13px">
-        <strong>Tel:</strong> 0176‑PutzFee123
+        <strong>Tel:</strong> 0176-PutzFee123
       </div>
     </aside>
   </section>
@@ -94,7 +97,23 @@
     </div>
   </section>
 
-  <!-- Kontakt -->
+<!-- ERDMÄNNCHEN QUALITÄTSBOTSCHAFTER -->
+<section id="qualitaet" style="margin-top:24px">
+  <div class="card">
+    <h2>Erdmännchen – Qualitätsbotschafter</h2>
+    <p class="lead">Unsere drei Erdmännchen achten auf jedes Detail – für perfekte Fensterreinigung.</p>
+
+    <div style="text-align:center; margin-top:20px;">
+      <img 
+        src="erdmaenchen.png"
+        alt="Erdmännchen Qualitätsbotschafter"
+        style="max-width:100%; border-radius:12px; box-shadow:0 10px 30px rgba(0,0,0,0.08);"
+      >
+    </div>
+  </div>
+</section>
+
+  <!-- KONTAKT -->
   <section id="kontakt" style="margin-top:24px">
     <div class="card">
       <h2>Kontakt</h2>
@@ -109,6 +128,7 @@
       </form>
     </div>
   </section>
+
 </main>
 <footer>© Olivia’s Window Cleaning</footer>
 </body>
