--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   .gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:16px;margin-top:18px}
   .gallery img{width:100%;border-radius:10px;object-fit:cover;box-shadow:0 6px 16px rgba(0,0,0,0.06)}
   footer{text-align:center;margin:28px 0;color:var(--muted)}
+  .new-badge{display:inline-block;background:#ff3b3b;color:white;font-weight:800;padding:4px 10px;border-radius:8px;margin-right:8px;font-size:14px}
 </style>
 </head>
 <body>
@@ -93,6 +94,19 @@
         <img src="IMG-20251108-WA0008.jpg" alt="Referenz 1" />
         <img src="IMG-20251108-WA0000.jpg" alt="Referenz 2" />
         <img src="IMG-20251108-WA0001.jpg" alt="Referenz 3" />
+      </div>
+    </div>
+  </section>
+
+  <!-- NEW ORCHID SECTION -->
+  <section id="orchideen" style="margin-top:24px">
+    <div class="card">
+      <span class="new-badge">NEU</span>
+      <h2 style="display:inline-block;vertical-align:middle">Achtung nur für kurze Zeit: Orchideen wässern</h2>
+      <p class="lead">Wir bieten jetzt das professionelle Wässern von Orchideen an — nur 0,50 EUR pro Stück.</p>
+
+      <div style="text-align:center;margin-top:18px;">
+        <img src="9b3c858b-c224-4a69-9ae3-897c1892c8d3.png" alt="Orchideenblüte" style="max-width:100%;border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,0.08);">
       </div>
     </div>
   </section>
