--- a/index.html
+++ b/index.html
@@ -111,6 +111,28 @@
     </div>
   </section>
 
+<!-- WEIHNACHTSDEKORATION -->
+<section id="weihnachten" style="margin-top:24px">
+  <div class="card">
+    <span class="new-badge">NEU</span>
+    <h2 style="display:inline-block;vertical-align:middle">
+      Nur für kurze Zeit: Weihnachtsdekoration
+    </h2>
+    <p class="lead">
+      Egal was – wir sind immer parat. Mit weihnachtlichen Preisen.
+    </p>
+
+    <div style="text-align:center; margin-top:18px;">
+      <img 
+        src="weihnachtliche-wohnung.png"
+        alt="Weihnachtlich dekorierte Wohnung"
+        style="max-width:70%; border-radius:12px; box-shadow:0 10px 26px rgba(0,0,0,0.08);"
+      >
+    </div>
+  </div>
+</section>
+
+
 <!-- ERDMÄNNCHEN QUALITÄTSBOTSCHAFTER -->
 <section id="qualitaet" style="margin-top:24px">
   <div class="card">
