--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Olivia’s Window Cleaning — Nr. 1 in der Welt</title>
+<title>Olivia’s Home Improvements — Nr. 1 in der Welt</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -16,7 +16,7 @@
   body{margin:0;font-family:'Inter',system-ui;background:linear-gradient(180deg,var(--bg),#ffffff 60%);color:#08304b;}
   header{display:flex;justify-content:space-between;align-items:center;padding:18px 24px;}
   .brand{display:flex;gap:12px;align-items:center}
-  .logo{width:56px;height:56px;border-radius:10px;background:linear-gradient(135deg,var(--accent),#2aa1ff);display:flex;align-items:center;justify-content:center;color:white;font-weight:800;font-size:20px;}
+  .logo-img{width:60px;height:auto;border-radius:10px;}
   nav a{margin-left:16px;color:var(--muted);text-decoration:none;font-weight:600}
   .container{max-width:1100px;margin:12px auto;padding:0 18px}
   .hero{display:grid;grid-template-columns:1fr 420px;gap:20px;align-items:start;margin-top:6px;}
@@ -31,14 +31,16 @@
 </style>
 </head>
 <body>
+
 <header>
   <div class="brand">
-    <div class="logo">OF</div>
+    <img class="logo-img" src="Logo.png" alt="Logo">
     <div>
-      <div style="font-weight:800;font-size:16px">Olivia’s Window Cleaning</div>
-      <div style="font-size:12px;color:var(--muted)">Glasklar. Freundlich. Professionell.</div>
+      <div style="font-weight:800;font-size:16px">Olivia’s Home Improvements</div>
+      <div style="font-size:12px;color:var(--muted)">Reinigung. Pflege. Verschönerung. Spezialisiert auf Fenster.</div>
     </div>
   </div>
+
   <nav>
     <a href="#services">Leistungen</a>
     <a href="#referenzen">Referenzen</a>
@@ -46,13 +48,15 @@
     <a href="#kontakt">Kontakt</a>
   </nav>
 </header>
+
 <main class="container">
 
   <!-- HERO -->
   <section class="hero">
     <div class="card">
       <h1>Saubere Fenster — professionell & freundlich</h1>
-      <p class="lead">Erstklassiger Fensterreinigungsservice für Zuhause und Büro. Jetzt mit frischen Foto-Referenzen echter Glanzarbeiten.</p>
+      <p class="lead">Erstklassige Fenster- & Hauspflege für Zuhause und Büro. Jetzt mit frischen Foto-Referenzen echter Glanzarbeiten.</p>
+
       <div class="grid-2">
         <div class="card">
           <h3>Unsere Leistungen</h3>
@@ -63,25 +67,34 @@
             <li>Wintergärten & Glasfronten</li>
           </ul>
         </div>
+
         <div class="card">
           <h3>Preise</h3>
           <table style="width:100%;margin-top:8px;border-collapse:collapse;color:var(--muted);font-weight:600">
-            <tr><td style="padding:8px;border-bottom:1px solid #f1f6fb">Standard</td><td style="padding:8px;text-align:right">ab 12 € / Fenster</td></tr>
-            <tr><td style="padding:8px;border-bottom:1px solid #f1f6fb">Glanzpaket</td><td style="padding:8px;text-align:right">+ 5 €</td></tr>
-            <tr><td style="padding:8px">Rahmenreinigung</td><td style="padding:8px;text-align:right">ab 8 €</td></tr>
+            <tr>
+              <td style="padding:8px;border-bottom:1px solid #f1f6fb">Standard</td>
+              <td style="padding:8px;text-align:right">ab 1 € / Fenster</td>
+            </tr>
+            <tr>
+              <td style="padding:8px;border-bottom:1px solid #f1f6fb">Glanzpaket</td>
+              <td style="padding:8px;text-align:right">+ 0,50 €</td>
+            </tr>
+            <tr>
+              <td style="padding:8px">Rahmenreinigung</td>
+              <td style="padding:8px;text-align:right">ab 0,80 €</td>
+            </tr>
           </table>
         </div>
       </div>
     </div>
+
     <aside class="card">
       <div style="font-weight:800">Zertifiziert</div>
       <div style="font-size:12px;color:var(--muted)">Sauberkeit & Qualität</div>
       <div style="margin-top:12px">
         <img src="olivia-cert.jpg" onerror="this.style.display='none'" style="width:100%;border-radius:10px">
       </div>
-      <div style="margin-top:12px;color:var(--muted);font-size:13px">
-        <strong>Tel:</strong> 0176-PutzFee123
-      </div>
+      <div style="margin-top:12px;color:var(--muted);font-size:13px"><strong>Tel:</strong> 0176-PutzFee123</div>
     </aside>
   </section>
 
@@ -89,7 +102,7 @@
   <section id="referenzen" style="margin-top:24px">
     <div class="card">
       <h2>Referenzen — frisch geputzte Fenster</h2>
-      <p class="lead">Hier findest du fünf Beispielbilder für besonders schöne Reinigungsergebnisse.</p>
+      <p class="lead">Hier findest du Foto-Beispiele für besonders schöne Reinigungsergebnisse.</p>
       <div class="gallery">
         <img src="IMG-20251108-WA0008.jpg" alt="Referenz 1" />
         <img src="IMG-20251108-WA0000.jpg" alt="Referenz 2" />
@@ -98,12 +111,12 @@
     </div>
   </section>
 
-  <!-- NEW ORCHID SECTION -->
+  <!-- ORCHIDEEN -->
   <section id="orchideen" style="margin-top:24px">
     <div class="card">
       <span class="new-badge">NEU</span>
       <h2 style="display:inline-block;vertical-align:middle">Achtung nur für kurze Zeit: Orchideen wässern</h2>
-      <p class="lead">Wir bieten jetzt das professionelle Wässern von Orchideen an — nur 0,50 EUR pro Stück.</p>
+      <p class="lead">Professionelles Orchideen-Wässern — nur 0,50 EUR pro Stück.</p>
 
       <div style="text-align:center;margin-top:18px;">
         <img src="9b3c858b-c224-4a69-9ae3-897c1892c8d3.png" alt="Orchideenblüte" style="max-width:100%;border-radius:12px;box-shadow:0 10px 30px rgba(0,0,0,0.08);">
@@ -111,49 +124,45 @@
     </div>
   </section>
 
-<!-- WEIHNACHTSDEKORATION -->
-<section id="weihnachten" style="margin-top:24px">
-  <div class="card">
-    <span class="new-badge">NEU</span>
-    <h2 style="display:inline-block;vertical-align:middle">
-      Nur für kurze Zeit: Weihnachtsdekoration
-    </h2>
-    <p class="lead">
-      Egal was – wir sind immer parat. Mit weihnachtlichen Preisen.
-    </p>
+  <!-- WEIHNACHTSDEKORATION -->
+  <section id="weihnachten" style="margin-top:24px">
+    <div class="card">
+      <span class="new-badge">NEU</span>
+      <h2 style="display:inline-block;vertical-align:middle">Nur für kurze Zeit: Weihnachtsdekoration</h2>
+      <p class="lead">Egal was – wir sind immer parat. Mit weihnachtlichen Preisen.</p>
 
-    <div style="text-align:center; margin-top:18px;">
-      <img 
-        src="weihnachtliche-wohnung.png"
-        alt="Weihnachtlich dekorierte Wohnung"
-        style="max-width:70%; border-radius:12px; box-shadow:0 10px 26px rgba(0,0,0,0.08);"
-      >
+      <div style="text-align:center; margin-top:18px;">
+        <img 
+          src="weihnachtliche-wohnung.png"
+          alt="Weihnachtlich dekorierte Wohnung"
+          style="max-width:70%; border-radius:12px; box-shadow:0 10px 26px rgba(0,0,0,0.08);"
+        >
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
+  <!-- ERDMÄNNCHEN -->
+  <section id="qualitaet" style="margin-top:24px">
+    <div class="card">
+      <h2>Erdmännchen – Qualitätsbotschafter</h2>
+      <p class="lead">Unsere drei Erdmännchen achten auf jedes Detail – für perfekte Fensterreinigung.</p>
 
-<!-- ERDMÄNNCHEN QUALITÄTSBOTSCHAFTER -->
-<section id="qualitaet" style="margin-top:24px">
-  <div class="card">
-    <h2>Erdmännchen – Qualitätsbotschafter</h2>
-    <p class="lead">Unsere drei Erdmännchen achten auf jedes Detail – für perfekte Fensterreinigung.</p>
-
-    <div style="text-align:center; margin-top:20px;">
-      <img 
-        src="erdmaenchen.png"
-        alt="Erdmännchen Qualitätsbotschafter"
-        style="max-width:100%; border-radius:12px; box-shadow:0 10px 30px rgba(0,0,0,0.08);"
-      >
+      <div style="text-align:center; margin-top:20px;">
+        <img 
+          src="erdmaenchen.png"
+          alt="Erdmännchen Qualitätsbotschafter"
+          style="max-width:100%; border-radius:12px; box-shadow:0 10px 30px rgba(0,0,0,0.08);"
+        >
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <!-- KONTAKT -->
   <section id="kontakt" style="margin-top:24px">
     <div class="card">
       <h2>Kontakt</h2>
       <p class="lead">Schreib uns eine Nachricht — wir melden uns schnell zurück.</p>
+
       <form style="margin-top:12px">
         <div style="display:flex;gap:8px;margin-bottom:8px">
           <input placeholder="Name" style="flex:1;padding:10px;border-radius:8px;border:1px solid #eef">
@@ -166,6 +175,8 @@
   </section>
 
 </main>
-<footer>© Olivia’s Window Cleaning</footer>
+
+<footer>© Olivia’s Home Improvements</footer>
+
 </body>
 </html>
